--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "muber",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test nodemon --exec 'mocha --recursive -R min'"
+    "start": "ts-node src/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "mocha": "^3.2.0",
-    "mongoose": "^4.7.1",
-    "supertest": "^2.0.1"
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.1",
+    "mocha": "^10.8.2",
+    "mongoose": "^6.13.4",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
